force-app/main/default/objects/Opportunity/fields/Detractors__c.field-meta.xml
<CustomField>
    <fullName>Detractors__c</fullName>
    <formula>If((Customer_Characteristics__c = &apos;Detractor&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>