force-app/main/default/objects/Opportunity/fields/Digital_Response__c.field-meta.xml
<CustomField>
    <fullName>Digital_Response__c</fullName>
    <formula>If((ISPICKVAL(QD_FeedBack_Status__c, &apos;Response Received from Digital&apos;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>