force-app/main/default/objects/Opportunity/fields/Dispatch_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Clearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispatch Clearance</label>
    <type>Checkbox</type>
</CustomField>