force-app/main/default/objects/Opportunity/fields/Dispatch_Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Clearance_Date__c</fullName>
    <label>Dispatch Clearance Date</label>
    <type>Date</type>
</CustomField>