force-app/main/default/objects/Opportunity/fields/Dispatch_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Type__c</fullName>
    <label>Dispatch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>D2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>