force-app/main/default/objects/Opportunity/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <formula>Owner.Contact.Account.Name</formula>
    <label>Distributor</label>
    <type>Text</type>
</CustomField>