force-app/main/default/objects/Opportunity/fields/Distributor_Cash_Balance__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Cash_Balance__c</fullName>
    <formula>Owner.Contact.Account.Advance_Cash_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Cash Balance</label>
    <type>Text</type>
</CustomField>