force-app/main/default/objects/Opportunity/fields/Divison__c.field-meta.xml
<CustomField>
    <fullName>Divison__c</fullName>
    <label>Divison</label>
    <length>2</length>
    <type>Text</type>
</CustomField>