force-app/main/default/objects/Opportunity/fields/Drawing_approved_date__c.field-meta.xml
<CustomField>
    <fullName>Drawing_approved_date__c</fullName>
    <label>Drawing approved date</label>
    <type>Date</type>
</CustomField>