force-app/main/default/objects/Opportunity/fields/Drawing_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Lead_Time__c</fullName>
    <formula>Date_Of_PO_Placed__c -  Plant_Added_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawing Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>