force-app/main/default/objects/Opportunity/fields/EDP__c.field-meta.xml
<CustomField>
    <fullName>EDP__c</fullName>
    <label>EDP</label>
    <type>Date</type>
</CustomField>