force-app/main/default/objects/Opportunity/fields/Error_from_SAP_Date__c.field-meta.xml
<CustomField>
    <fullName>Error_from_SAP_Date__c</fullName>
    <label>Error from SAP Date</label>
    <type>Date</type>
</CustomField>