force-app/main/default/objects/Opportunity/fields/Exception_Execution__c.field-meta.xml
<CustomField>
    <fullName>Exception_Execution__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exception Execution</label>
    <type>Checkbox</type>
</CustomField>