force-app/main/default/objects/Opportunity/fields/Executive_Location__c.field-meta.xml
<CustomField>
    <fullName>Executive_Location__c</fullName>
    <label>Executive Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ghaziabad</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Gurgaon</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Jodhpur</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Varanasi</fullName>
            </value>
            <value>
                <fullName>Uttarakhand</fullName>
            </value>
            <value>
                <fullName>Punjab &amp; HP</fullName>
            </value>
            <value>
                <fullName>South Bengal</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>North Bengal</fullName>
            </value>
            <value>
                <fullName>Odisha</fullName>
            </value>
            <value>
                <fullName>Jharkhand</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Telengana</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>