force-app/main/default/objects/Opportunity/fields/Expected_Buying_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Expected_Buying_Timeline__c</fullName>
    <label>Expected Buying Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>2 - 3 Months</fullName>
            </value>
            <value>
                <fullName>3 - 6 Months</fullName>
            </value>
            <value>
                <fullName>6 - 12 Months</fullName>
            </value>
            <value>
                <fullName>More than 1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>