force-app/main/default/objects/Opportunity/fields/Expected_Manufacturing_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Manufacturing_Date__c</fullName>
    <label>Expected Manufacturing Date</label>
    <type>Date</type>
</CustomField>