force-app/main/default/objects/Opportunity/fields/Expected_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Expected_Quantity__c</fullName>
    <label>Expected Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More than 301 Units</fullName>
            </value>
            <value>
                <fullName>151 - 300 Units</fullName>
            </value>
            <value>
                <fullName>51 - 150 Units</fullName>
            </value>
            <value>
                <fullName>26 - 50 Units</fullName>
            </value>
            <value>
                <fullName>&lt;= 25 Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>