force-app/main/default/objects/Opportunity/fields/Expected_Std_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Std_Dispatch_Date__c</fullName>
    <formula>Place_PO_Date__c +  Max_DDP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Std Dispatch Date</label>
    <type>Date</type>
</CustomField>