force-app/main/default/objects/Opportunity/fields/Facebook_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Form_Name__c</fullName>
    <label>Facebook Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>