force-app/main/default/objects/Opportunity/fields/Feedback_SMS_Counter__c.field-meta.xml
<CustomField>
    <fullName>Feedback_SMS_Counter__c</fullName>
    <label>Feedback SMS Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>