force-app/main/default/objects/Opportunity/fields/Flow_State__c.field-meta.xml
<CustomField>
    <fullName>Flow_State__c</fullName>
    <label>Flow State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WEST BENGAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>