force-app/main/default/objects/Opportunity/fields/Fresh_PO_QTY__c.field-meta.xml
<CustomField>
    <fullName>Fresh_PO_QTY__c</fullName>
    <label>Fresh PO QTY</label>
    <summarizedField>OpportunityLineItem.MTO_Quantity__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>