force-app/main/default/objects/Opportunity/fields/FSM_Installation_WorkOrder_Id__c.field-meta.xml
<CustomField>
    <fullName>FSM_Installation_WorkOrder_Id__c</fullName>
    <label>FSM Installation WorkOrder Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>