force-app/main/default/objects/Opportunity/fields/FSM_Installation_Workorder_Number__c.field-meta.xml
<CustomField>
    <fullName>FSM_Installation_Workorder_Number__c</fullName>
    <label>FSM Installation Workorder Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>