force-app/main/default/objects/Opportunity/fields/FSM_Kickoff_WorkOrder_ID__c.field-meta.xml
<CustomField>
    <fullName>FSM_Kickoff_WorkOrder_ID__c</fullName>
    <label>FSM Kickoff WorkOrder ID</label>
    <type>TextArea</type>
</CustomField>