force-app/main/default/objects/Opportunity/fields/FSM_Kickoff_WorkOrder_Number__c.field-meta.xml
<CustomField>
    <fullName>FSM_Kickoff_WorkOrder_Number__c</fullName>
    <label>FSM Kickoff WorkOrder Number</label>
    <type>TextArea</type>
</CustomField>