force-app/main/default/objects/Opportunity/fields/FSM_Wo_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>FSM_Wo_Job_Id__c</fullName>
    <label>FSM Wo Job Id</label>
    <type>TextArea</type>
</CustomField>