force-app/main/default/objects/Opportunity/fields/FSM_WorkOrder_Id__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkOrder_Id__c</fullName>
    <label>FSM WorkOrder Id</label>
    <type>TextArea</type>
</CustomField>