force-app/main/default/objects/Opportunity/fields/GHC_Flag__c.field-meta.xml
<CustomField>
    <fullName>GHC_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GHC Flag</label>
    <type>Checkbox</type>
</CustomField>