force-app/main/default/objects/Opportunity/fields/Green_Channel_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Green_Channel_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Green Channel Opportunity</label>
    <type>Checkbox</type>
</CustomField>