force-app/main/default/objects/Opportunity/fields/Gross_of_procurement_price__c.field-meta.xml
<CustomField>
    <fullName>Gross_of_procurement_price__c</fullName>
    <formula>Overall_Order_Level_Proc_Price__c  +  Overall_Accessory_Procurement_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross of procurement price (without GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>