force-app/main/default/objects/Opportunity/fields/H_C_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>H_C_Sales_Manager__c</fullName>
    <formula>Owner.Contact.Account.B2B_SM__r.FirstName +&apos; &apos;+ Owner.Contact.Account.B2B_SM__r.LastName</formula>
    <label>H&amp;C Sales Manager</label>
    <type>Text</type>
</CustomField>