force-app/main/default/objects/Opportunity/fields/H_C_SM_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>H_C_SM_Employee_Id__c</fullName>
    <formula>Owner.Contact.Account.B2B_SM__r.Sales_Employee_ID__c</formula>
    <label>H&amp;C SM Employee Id</label>
    <type>Text</type>
</CustomField>