force-app/main/default/objects/Opportunity/fields/IL1_Approval__c.field-meta.xml
<CustomField>
    <fullName>IL1_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IL1 Approval</label>
    <type>Checkbox</type>
</CustomField>