force-app/main/default/objects/Opportunity/fields/Installation_Pending_WO_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Installation_Pending_WO_Quantity__c</fullName>
    <label>Installation Pending WO Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>