force-app/main/default/objects/Opportunity/fields/Installation_Ready_Reminder_1__c.field-meta.xml
<CustomField>
    <fullName>Installation_Ready_Reminder_1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Communication is sent after 10 days of PO Placed Date</inlineHelpText>
    <label>Installation Ready Reminder-1</label>
    <type>Checkbox</type>
</CustomField>