force-app/main/default/objects/Opportunity/fields/Installation_Ready_Reminder_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Ready_Reminder_1_Date__c</fullName>
    <label>Installation Ready Reminder-1 Date</label>
    <type>DateTime</type>
</CustomField>