force-app/main/default/objects/Opportunity/fields/Installation_Ready_Reminder_2__c.field-meta.xml
<CustomField>
    <fullName>Installation_Ready_Reminder_2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Communication is sent after 30 days of PO Placed Date</inlineHelpText>
    <label>Installation Ready Reminder-2</label>
    <type>Checkbox</type>
</CustomField>