force-app/main/default/objects/Opportunity/fields/Installation_Ready_Reminder_3__c.field-meta.xml
<CustomField>
    <fullName>Installation_Ready_Reminder_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Communication is sent after 50 days of PO Placed Date</inlineHelpText>
    <label>Installation Ready Reminder-3</label>
    <type>Checkbox</type>
</CustomField>