force-app/main/default/objects/Opportunity/fields/Installation_Tips_Reminder_1__c.field-meta.xml
<CustomField>
    <fullName>Installation_Tips_Reminder_1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Communication is sent after 11 days of PO Placed Date</inlineHelpText>
    <label>Installation Tips Reminder-1</label>
    <type>Checkbox</type>
</CustomField>