force-app/main/default/objects/Opportunity/fields/Installation_Tips_Reminder_2__c.field-meta.xml
<CustomField>
    <fullName>Installation_Tips_Reminder_2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Communication is sent after 31 days of PO Placed Date</inlineHelpText>
    <label>Installation Tips Reminder-2</label>
    <type>Checkbox</type>
</CustomField>