force-app/main/default/objects/Opportunity/fields/Installation_Tips_Reminder_3__c.field-meta.xml
<CustomField>
    <fullName>Installation_Tips_Reminder_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Communication is sent after 51 days of PO Placed Date</inlineHelpText>
    <label>Installation Tips Reminder-3</label>
    <type>Checkbox</type>
</CustomField>