force-app/main/default/objects/Opportunity/fields/Installation_Tips_Reminder_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Tips_Reminder_3_Date__c</fullName>
    <label>Installation Tips Reminder-3 Date</label>
    <type>DateTime</type>
</CustomField>