force-app/main/default/objects/Opportunity/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>