force-app/main/default/objects/Opportunity/fields/Is_Order_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Order Replacement</label>
    <type>Checkbox</type>
</CustomField>