force-app/main/default/objects/Opportunity/fields/IsAPICreated__c.field-meta.xml
<CustomField>
    <fullName>IsAPICreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAPICreated</label>
    <type>Checkbox</type>
</CustomField>