force-app/main/default/objects/Opportunity/fields/IsChildOpp__c.field-meta.xml
<CustomField>
    <fullName>IsChildOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChildOpp</label>
    <type>Checkbox</type>
</CustomField>