force-app/main/default/objects/Opportunity/fields/isReplacementOrder__c.field-meta.xml
<CustomField>
    <fullName>isReplacementOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReplacementOrder</label>
    <type>Checkbox</type>
</CustomField>