force-app/main/default/objects/Opportunity/fields/IT_Comments__c.field-meta.xml
<CustomField>
    <fullName>IT_Comments__c</fullName>
    <description>To add comments whenever there is a change in status or field updation</description>
    <label>IT Comments</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>