force-app/main/default/objects/Opportunity/fields/KAC_Check__c.field-meta.xml
<CustomField>
    <fullName>KAC_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KAC Check</label>
    <type>Checkbox</type>
</CustomField>