force-app/main/default/objects/Opportunity/fields/KAC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>KAC_Opportunity__c</fullName>
    <formula>IF( KAC_Check__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Tick&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Tick&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KAC Opportunity</label>
    <type>Text</type>
</CustomField>