force-app/main/default/objects/Opportunity/fields/Line_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Quantity__c</fullName>
    <label>Line Item Quantity</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>