force-app/main/default/objects/Opportunity/fields/Margin_Cost_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Margin_Cost_Per_Unit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Margin Cost Per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>