force-app/main/default/objects/Opportunity/fields/Margin_per_Line_Item_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Margin_per_Line_Item_per_Unit__c</fullName>
    <formula>IF( OLI_Quantity__c &gt; 0, ROUND(( Overall_Order_Margin__c  /  OLI_Quantity__c ),2) , 0)</formula>
    <label>Margin &amp; Freight per Line Item per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>