force-app/main/default/objects/Opportunity/fields/Max_Accepted_by_plant_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Accepted_by_plant_Date__c</fullName>
    <label>Max Accepted by plant Date</label>
    <summarizedField>OpportunityLineItem.Accepted_by_Plant_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>