force-app/main/default/objects/Opportunity/fields/Max_CDDP_MG1_segregation__c.field-meta.xml
<CustomField>
    <fullName>Max_CDDP_MG1_segregation__c</fullName>
    <label>Max CPDD MG1 segregation</label>
    <summarizedField>OpportunityLineItem.CDDP_MG1_segregations__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>