force-app/main/default/objects/Opportunity/fields/Max_DDP__c.field-meta.xml
<CustomField>
    <fullName>Max_DDP__c</fullName>
    <label>Max DDP</label>
    <summarizedField>OpportunityLineItem.DDP__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.B2C_Is_Accessory_Line_Item__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>