force-app/main/default/objects/Opportunity/fields/Max_Delivery_Date_From_WO__c.field-meta.xml
<CustomField>
    <fullName>Max_Delivery_Date_From_WO__c</fullName>
    <label>Max Delivery Date From WO</label>
    <summarizedField>OpportunityLineItem.Delivery_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>