force-app/main/default/objects/Opportunity/fields/Max_Dispatch_to_Consumer_Fully__c.field-meta.xml
<CustomField>
    <fullName>Max_Dispatch_to_Consumer_Fully__c</fullName>
    <label>Max Dispatch to Consumer Fully</label>
    <summarizedField>OpportunityLineItem.Dispatched_to_Consumer_Fully_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>