force-app/main/default/objects/Opportunity/fields/Max_GRN_Date_OLI__c.field-meta.xml
<CustomField>
    <fullName>Max_GRN_Date_OLI__c</fullName>
    <label>Max GRN Date OLI</label>
    <summarizedField>OpportunityLineItem.GRN_Date__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.GRN_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>