force-app/main/default/objects/Opportunity/fields/Max_Manufactured_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Manufactured_Date__c</fullName>
    <label>Max Manufactured Date</label>
    <summarizedField>OpportunityLineItem.Manufactured_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>