force-app/main/default/objects/Opportunity/fields/Max_Production_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Production_Start_Date__c</fullName>
    <label>Max Production Start Date</label>
    <summarizedField>OpportunityLineItem.Production_Start_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>