force-app/main/default/objects/Opportunity/fields/Max_Received_by_Distributor_Fully_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Received_by_Distributor_Fully_Date__c</fullName>
    <label>Max Received by Distributor Fully Date</label>
    <summarizedField>OpportunityLineItem.Received_by_Distributor_Fully_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>