force-app/main/default/objects/Opportunity/fields/Max_Sent_to_Plant_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Sent_to_Plant_Date__c</fullName>
    <label>Max Sent to Plant Date</label>
    <summarizedField>OpportunityLineItem.Sent_to_Plant_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>