force-app/main/default/objects/Opportunity/fields/Min_Production_Stage_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Min_Production_Stage_Line_Item__c</fullName>
    <formula>IF( Min_Production_Stage_Number__c = 1, &apos;In Verification&apos;, IF(Min_Production_Stage_Number__c = 2, &apos;In Production&apos;, IF(Min_Production_Stage_Number__c = 3, &apos;Manufactured&apos;, IF(Min_Production_Stage_Number__c = 4, &apos;Ready to Dispatch&apos;, IF(Min_Production_Stage_Number__c = 5, &apos;Dispatched&apos;, &apos;Nil&apos; ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Production Stage Line Item</label>
    <type>Text</type>
</CustomField>