force-app/main/default/objects/Opportunity/fields/Min_Production_Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Min_Production_Stage_Number__c</fullName>
    <label>Min Production Stage Number</label>
    <summarizedField>OpportunityLineItem.Production_Stage_Number__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.B2C_Is_Accessory_Line_Item__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>