force-app/main/default/objects/Opportunity/fields/Mobile_Number_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_Changed_By__c</fullName>
    <label>Mobile Number Changed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>