force-app/main/default/objects/Opportunity/fields/Mobile_Number_Changed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_Changed_Date_Time__c</fullName>
    <label>Mobile Number Changed Date Time</label>
    <type>DateTime</type>
</CustomField>