force-app/main/default/objects/Opportunity/fields/Mode_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Payment__c</fullName>
    <label>Mode Of Payment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>