force-app/main/default/objects/Opportunity/fields/Net_procurement_price_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Net_procurement_price_with_GST__c</fullName>
    <formula>Gross_of_procurement_price__c  * 1.18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net procurement price (with GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>