force-app/main/default/objects/Opportunity/fields/No_Of_Days_in_TSL_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_in_TSL_Warehouse__c</fullName>
    <formula>Max_GRN_Date_OLI__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Days in TSL Warehouse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>