force-app/main/default/objects/Opportunity/fields/No_of_days_to_fulfill_CPDD_B2B__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_to_fulfill_CPDD_B2B__c</fullName>
    <formula>B2B_Actual_CPDD__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No_of_days_to_fulfill_CPDD_B2B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>