force-app/main/default/objects/Opportunity/fields/No_of_days_to_fulfill_CPDD_B2C__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_to_fulfill_CPDD_B2C__c</fullName>
    <formula>Customer_Promised_Delivery_Date_Final__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of days to fulfill CPDD B2C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>