force-app/main/default/objects/Opportunity/fields/No_of_Internal_Doors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Internal_Doors__c</fullName>
    <label>No. of Internal Doors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>