force-app/main/default/objects/Opportunity/fields/No_Response__c.field-meta.xml
<CustomField>
    <fullName>No_Response__c</fullName>
    <formula>If((ISPICKVAL(QD_FeedBack_Status__c, &apos;Response Not Received&apos;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>