force-app/main/default/objects/Opportunity/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <label>NPS Score</label>
    <length>2</length>
    <type>Text</type>
</CustomField>